Onsyte: demonstrate all moving parts (see details)
This commit demonstrates that the following actions work
successfully:

- Add and remove Debian/APT dependencies using the
  CPACK_DEBIAN_PACKAGE_DEPENDS variable instead
  of `sudo apt install`.
- Add and remove Python dependencies in preinst, postrm.
- Create and remove directories.
- Change ownerships and permissions.

The following actions were not demonstrated:
- Move, copy, and edit files.
- Prompt for user input.
- Logic, decision-making, branching.
- Add and remove Python dependencies using FindPython module.

--- a/onsyte/CMakeLists.txt
+++ b/onsyte/CMakeLists.txt
@@ -35,11 +35,11 @@ SET(CPACK_DEBIAN_PACKAGE_MAINTAINER "FreeWave") #required
 SET(CPACK_DEBIAN_PACKAGE_ARCHITECTURE "armhf")
 SET(CPACK_DEBIAN_PACKAGE_SECTION "util")
 set(CPACK_RESOURCE_FILE_LICENSE "${CMAKE_CURRENT_SOURCE_DIR}/License.txt")
-set(CPACK_PACKAGE_VERSION_MAJOR "${onsyte_VERSION_MAJOR}")
-set(CPACK_PACKAGE_VERSION_MINOR "${onsyte_VERSION_MINOR}")
+set(CPACK_PACKAGE_VERSION_MAJOR 0)
+set(CPACK_PACKAGE_VERSION_MINOR 1)
 # TODO: Populate _DEPENDS, based on chiliblanco, chiliverde, and delete_old_files.
 # TODO: Put all of the pip3 installs in the preinst script.
-set(CPACK_DEBIAN_PACKAGE_DEPENDS "") 
-set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_LIST_DIR}/preinst,${CMAKE_CURRENT_LIST_DIR}/postinst,${CMAKE_CURRENT_LIST_DIR}/postrm")
+set(CPACK_DEBIAN_PACKAGE_DEPENDS "python3-pip") 
+# set(CPACK_DEBIAN_PACKAGE_DEPENDS "cron") 
+set(CPACK_DEBIAN_PACKAGE_CONTROL_EXTRA "${CMAKE_CURRENT_LIST_DIR}/preinst;${CMAKE_CURRENT_LIST_DIR}/postinst;${CMAKE_CURRENT_LIST_DIR}/postrm")
 include(CPack)
-
